11. Resolved Technology Icon Not Showing Issue

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -91,3 +91,7 @@
   height: 3vh;
   margin-top: 2px;
 }
+
+a {
+  text-decoration: none;
+}
